# jadex-v

./: .bazelrc  .gitignore  .gitlab-ci.yml  BUILD.bazel  MODULE.bazel  MODULE.bazelbak  README.md  bazel-jadex-v  benchmark.bat  benchmark.sh  benchmark_thirdparty.bat  benchmark_thirdparty.sh  build.gradle  cleangradle.sh  env.sh  find_build_files.sh  genbazel.sh  genbazel.shbak  gradle.properties  jadex-v.ipr  jadexversion.properties  maven_artifact.bzl  news.md  publish.gradle  readme.md  results.csv  rmEclipse.sh  runHelloWorld.bat  runHelloWorld.sh  settings.gradle  startHelloWorld.sh  version.gradle
application/bdi/: BUILD.bazel  build.gradle  settings.gradle
application/bpmn/: BUILD.bazel  build.gradle  settings.gradle
application/bpmn/src/test/java/jadex/bpmn/: BpmnTest.java
application/bt/: BUILD.bazel  build.gradle  deps.bzl  settings.gradle
application/launcher/: BUILD.bazel  build.gradle  deps.bzl  settings.gradle
application/launcher/src/main/java/jadex/launcher/: ApplicationLauncher.java
application/launcher/src/test/java/jadex/launcher/: ApplicationLauncherTest.java
application/micro/: BUILD.bazel  build.gradle  deps.bzl  settings.gradle
benchmark/bpmn/: BUILD.bazel  build.gradle  settings.gradle
benchmark/bpmn/src/test/java/jadex/benchmark/: Benchmark.bpmn  BpmnProcessAgentBenchmark.java  BpmnProcessAgentMain.java  BpmnProcessBenchmark.java
benchmark/core/: BUILD.bazel  build.gradle  deps.bzl  settings.gradle
benchmark/core/src/main/java/jadex/benchmark/: AbstractComponentBenchmark.java  BenchmarkHelper.java
benchmark/core/src/test/java/jadex/benchmark/: BenchmarkHelper.java  PlainComponentBenchmark.java  TestBenchmark.java
benchmark/micro/: BUILD.bazel  build.gradle  settings.gradle
benchmark/micro/src/test/java/jadex/benchmark/: MicroAgentBenchmark.java
communication/serialization/: BUILD.bazel  build.gradle
communication/serialization/src/main/java/jadex/serialization/: DefaultEqualsMethodReplacement.java  DefaultHashcodeMethodReplacement.java  IMethodReplacement.java  IMsgHeader.java  ISerializationServices.java  ISerializer.java  MsgHeader.java  SerializationServices.java
engine/bdi/: BUILD.bazel  build.gradle  settings.gradle
engine/bdi/src/main/java/jadex/bdi/: BDIFailureException.java  GoalDroppedException.java  GoalFailureException.java  IBDIAgent.java  IBDIAgentFeature.java  ICapability.java  IGoal.java  IPlan.java  PlanFailureException.java
engine/bdi/src/main/java/jadex/bdiv3/: ASMBDIClassGenerator.java  AbstractAsmBdiClassGenerator.java  BDIAgent.java  BDIClassGeneratorFactory.java  BDIClassGeneratorFactoryDesktop.java  BDIClassReader.java  BDICreationInfo.java  BDIEnhancer.java  BDIModelLoader.java  IBDIAgent.java  IBDIClassGenerator.java  OpcodeHelper.java
engine/bdi/src/main/schema/: jadex-bdi.xsd
engine/bdi/src/test/java/jadex/bdi/: TestBDI.java
engine/bdi/src/test/java/jadex/bdiv3/: BDIClassReaderTest.java  TestBDI.java  TestBDIMain.java
engine/bdi/src/test/java/jadex/benchmark/: AbstractBDIBenchmark.java  PojoBDIBenchmark.java  ReasoningBDIBenchmark.java  SimpleBDIBenchmark.java
engine/bdi/src/testFixtures/java/jadex/benchmark/: ReasoningBDI.java  SimpleBDI.java
engine/bt/: BUILD.bazel  build.gradle  deps.bzl  settings.gradle
engine/bt/src/main/java/jadex/bt/: BTCache.java  IBTAgentFeature.java  IChildTraversalStrategy.java  IConditionObserver.java  NodeListener.java
engine/bt/src/test/java/jadex/bt/: DecoratorTest.java  TestConditionAbort.java  TestParallelNode.java  TestRemoveChild.java  TestSelectorNode.java
engine/core/: BUILD.bazel  README.md  build.gradle  settings.gradle
engine/core/src/main/java/jadex/core/: Application.java  ChangeEvent.java  ComponentIdentifier.java  ComponentNotFoundException.java  ComponentTerminatedException.java  IAsyncStep.java  ICallable.java  IComponent.java  IComponentFactory.java  IComponentFeature.java  IComponentHandle.java  IComponentListener.java  IComponentManager.java  IExternalAccess.java  IIntermediateStep.java  INoCopyStep.java  IPullStep.java  IPullSubscriptionStep.java  IStep.java  ISubscriptionStep.java  ITerminableIntermediateStep.java  ITerminableStep.java  IThrowingConsumer.java  IThrowingFunction.java
engine/core/src/main/java/jadex/enginecore/: AbstractModelLoader.java  BulkMonitoringEvent.java  CacheableKernelModel.java  CacheableModel.java  ComponentIdentifier.java  ComponentNotFoundException.java  ComponentResultListener.java  ComposedRemoteFilter.java  FactoryFilter.java  IAsyncFilter.java  ICacheableModel.java  IComponentIdentifier.java  IComponentStep.java  IConditionalComponentStep.java  IErrorReport.java  ISteppable.java  (+23 more)
environment/environment/: BUILD.bazel  build.gradle  settings.gradle
feature/autostart/: BUILD.bazel  build.gradle  deps.bzl  settings.gradle
feature/configurator/: BUILD.bazel  feature.bzl  features.json  genfeatures.py  index.html  index.html_back  server.py
feature/execution/: BUILD.bazel  build.gradle  deps.bzl  settings.gradle
feature/featuretest/: BUILD.bazel  README.md  build.gradle
feature/injection/: BUILD.bazel  build.gradle  deps.bzl  settings.gradle
feature/result/: BUILD.bazel  build.gradle  settings.gradle
feature/simulation/: BUILD.bazel  build.gradle
llm/: BUILD.bazel  build.gradle  deps.bzl  settings.gradle
llm/src/main/java/jadex/llm/: ILlmFeature.java  ILlmService.java  IMcpClientService.java  IMcpHostService.java  IMcpTool.java  LlmFeature.java  LlmFeatureProvider.java  McpContent.java  McpResource.java  McpServerInfo.java  McpToolResult.java  McpToolSchema.java  ToolSchema.java
micro/lib/: BUILD.bazel  build.gradle  settings.gradle
monitoring/fluentd/: BUILD.bazel  build.gradle  deps.bzl  fluentd_install.txt  settings.gradle
monitoring/log4j/: BUILD.bazel  build.gradle  deps.bzl  settings.gradle
monitoring/opentelemetry/: BUILD.bazel  build.gradle  deps.bzl
serialization/json/: BUILD.bazel  build.gradle  deps.bzl  settings.gradle
serialization/traverser/: BUILD.bazel  build.gradle  settings.gradle
service/provided/: BUILD.bazel  build.gradle  settings.gradle
(+4485 files in other folders)
