load("@rules_java//java:defs.bzl", "java_library", "java_test")

load(":deps.bzl", "DEPS")

java_library(
    name = "llm",
    srcs = glob(["src/main/java/**/*.java",]),
    resources = glob(["src/main/resources/**"], allow_empty = True,),
    visibility = ["//visibility:public"],
    javacopts = ["--release", "21"],
    deps = [
        "//util/common",
        "//util/collection",
        "//serialization/traverser",
        "//serialization/json",
        "//communication/serialization",
        "//util/classreader",
        "//util/future",
        "//feature/autostart",
        "//engine/core",
        "//feature/execution",
        "//feature/injection",
        "//feature/simulation",
        "//monitoring/logbase",
        "//service/provided",
        "//service/required",
        "//service/publish",
        "//service/publishjetty",
    ] + DEPS,
)
