load("//feature/configurator:feature.bzl", "feature")

feature(name = "application-bdi")

load("@rules_java//java:defs.bzl", "java_library")

load(":deps.bzl", "DEPS")

java_library(
    name = "bdi",
    srcs = glob(["src/main/java/**/*.java",]),
    resources = glob(["src/main/resources/**", "src/main/java/**/*.md", "src/main/java/**/*.png"], allow_empty = True,),
    visibility = ["//visibility:public"],
    javacopts = ["--release", "21"],
    deps = [
        "//util/common",
        "//util/collection",
        "//util/future",
        "//engine/core",
        "//feature/execution",
        "//feature/injection",
        "//engine/bdi",
        "//environment/environment",
    ] + DEPS,
)