load("//feature/configurator:feature.bzl", "feature")

feature(name = "application-bpmn")

load("@rules_java//java:defs.bzl", "java_library", "java_test")

#load(":deps.bzl", "DEPS")

java_library(
    name = "bpmn",
    srcs = glob(["src/main/java/**/*.java",]),
    resources = glob(["src/main/resources/**"], allow_empty = True,),
    visibility = ["//visibility:public"],
    javacopts = ["--release", "21"],
    deps = [
        "//util/common",
        "//util/future",
        "//engine/core",
        "//feature/execution",
        "//feature/injection",
        "//engine/bpmn/engine",
        "//service/required",
        "//service/provided",
        "//engine/bpmn/requiredservice",
        "//engine/bpmn/providedservice",
        "//environment/environment",
    ] 
    #+ DEPS,
)