load("//feature/configurator:feature.bzl", "feature")

feature(name = "application-bt")

load("@rules_java//java:defs.bzl", "java_library", "java_test")

load(":deps.bzl", "DEPS")

java_library(
    name = "bt",
    srcs = glob(["src/main/java/**/*.java",]),
    resources = glob(["src/main/resources/**"], allow_empty = True,),
    visibility = ["//visibility:public"],
    javacopts = ["--release", "21"],
    deps = [
        "//util/common",
        "//util/collection",
        "//util/classreader",
        "//util/future",
        "//engine/core",
        "//feature/execution",
        "//feature/injection",
        "//engine/bt",
        # "//feature/simulation", # mastersimfeature has memory leak
        "//monitoring/logbase",
        "//service/provided",
        "//service/required",
        "//service/publish",
        "//service/publishjetty",
        "//environment/environment",
        "//monitoring/opentelemetry",
    ] + DEPS,
)