load("//feature/configurator:feature.bzl", "feature")

feature(name = "benchmark-bpmn")

load("@rules_java//java:defs.bzl", "java_library", "java_test")

#load(":deps.bzl", "DEPS")

java_test(
    name = "bpmn_test",
    srcs = glob(["src/test/java/**/*.java"]),
    resources = glob(["src/test/java/**/*.bpmn"], allow_empty = True,),
    main_class = "org.junit.platform.console.ConsoleLauncher",
    use_testrunner = False,
    args = [
        "--fail-if-no-tests",
        "--select-package", "jadex.benchmark",
        "--include-classname", ".*",
    ],
    deps = [
        "//util/common:common",
        "//engine/core",
        "//monitoring/logbase",
        "//util/collection:collection",
        "//feature/execution",
        "//benchmark/core",
        "//engine/bpmn/engine",
        "//util/future",
        "//feature/result",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_platform_junit_platform_suite_api",
    ],
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_suite_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_console",
    ],
)
