load("//feature/configurator:feature.bzl", "feature")

feature(name = "benchmark-core")

load("@rules_java//java:defs.bzl", "java_library", "java_test")

load(":deps.bzl", "DEPS")

java_library(
    name = "core",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"], allow_empty = True,),
    visibility = ["//visibility:public"],
    javacopts = ["--release", "21"],
    deps = [
        "//util/common:common",
        "//engine/core",
        "//monitoring/logbase",
        "//monitoring/opentelemetry",
        "//util/collection:collection",
        "//feature/execution:execution",
    ] + DEPS,
)

java_test(
    name = "benchmark_test",
    srcs = glob(["src/test/java/**/*.java"]),
    main_class = "org.junit.platform.console.ConsoleLauncher",
    use_testrunner = False,
    args = [
        "--select-package", "jadex.benchmark",
        "--fail-if-no-tests",
        "--include-classname", ".*",
    ],
    deps = [
        ":core",
        "//engine/core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_platform_junit_platform_suite_api",
    ],
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_suite_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_console",
    ],
)

