load("@rules_java//java:defs.bzl", "java_library", "java_test")

#load(":deps.bzl", "DEPS")

java_library(
    name = "serialization",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"], allow_empty = True,),
    visibility = ["//visibility:public"],
    javacopts = ["--release", "21"],
    deps = [
        "//util/common",
        "//util/collection",
        "//serialization/traverser",
        "//engine/core",
        "//serialization/json",
        "//serialization/binary",
    ] 
    #+ DEPS
)


