load("@rules_java//java:defs.bzl", "java_library", "java_test", "java_plugin")

load(":deps.bzl", "DEPS")

java_plugin(
    name = "auto_service_plugin",
    processor_class = "com.google.auto.service.processor.AutoServiceProcessor",
    generates_api = 1,
    deps = [
        "@maven//:com_google_auto_service_auto_service",
    ],
)

java_library(
    name = "autostart",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    visibility = ["//visibility:public"],
    javacopts = ["-source", "21", "-target", "21"],
    plugins = [":auto_service_plugin"],
    deps = ["//util/common",
        "//util/future",
        "//engine/core",
        "//feature/execution",
        "//feature/injection",
        "//util/javaparser",
        "//serialization/traverser",
        ] + DEPS,
)

java_test(
    name = "autostart_test",
    srcs = glob(["src/test/java/**/*.java"]),
    plugins = [":auto_service_plugin"],
    resources = glob(["src/test/resources/**"]),
    main_class = "org.junit.platform.console.ConsoleLauncher",
    use_testrunner = False,
    args = [
        "--select-package", "jadex",
        "--fail-if-no-tests",
    ],
    deps = [
        ":autostart",
        "//util/future",
        "//engine/core",
        "//feature/execution",
        "//feature/injection",
        "//util/javaparser",
        "//serialization/traverser",
        "@maven//:com_google_auto_service_auto_service_annotations",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_platform_junit_platform_suite_api",
        "@maven//:org_junit_platform_junit_platform_commons",
    ],
    runtime_deps = [
        "//util/future",
        "//engine/core",
        "//feature/execution",
        "//feature/injection",
        "//util/javaparser",
        "//serialization/traverser",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_suite_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_console",
    ],
)