load("@rules_java//java:defs.bzl", "java_library", "java_test")

load(":deps.bzl", "DEPS")

java_library(
    name = "injection",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    visibility = ["//visibility:public"],
    javacopts = ["--release", "21"],
    deps = [
        "//util/common",
        "//util/future",
        "//util/collection",
        "//engine/core",
        "//feature/execution",
    ] + DEPS,
)

java_library(
    name = "injection_testfixtures",
    srcs = glob(["src/testFixtures/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    visibility = ["//visibility:public"],
    javacopts = ["--release", "21"],
    deps = [
        ":injection",
        "//util/common",
        "//util/future",
        "//util/collection",
        "//engine/core",
        "//feature/execution",
        "//benchmark/core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_platform_junit_platform_suite_api",
    ] + DEPS,
)

java_test(
    name = "injection_test",
    srcs = glob(["src/test/java/**/*.java"]),
    main_class = "org.junit.platform.console.ConsoleLauncher",
    use_testrunner = False,
    args = [
        "--select-package", "jadex.injection",
        "--fail-if-no-tests",
    ],
    deps = [
        ":injection",
        ":injection_testfixtures",
        "//util/common",
        "//util/future",
        "//feature/result",
        "//benchmark/core",
        "//engine/core",
        "//feature/execution",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_platform_junit_platform_suite_api",
    ],
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_suite_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_console",
    ],
)
