load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "simulation",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    visibility = ["//visibility:public"],
    javacopts = ["-source", "21", "-target", "21"],
    deps = ["//util/common:common",
        "//feature/execution:execution",
        "//util/future:future",
        "//engine/core:core",],
)