load("@rules_java//java:defs.bzl", "java_library")

load(":deps.bzl", "DEPS")

java_library(
    name = "log4j",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    visibility = ["//visibility:public"],
    javacopts = ["--release", "21"],
    deps = [
        "//util/common:common",
        "//engine/core",
        "//feature/execution",
        "//util/future",
        "//monitoring/logbase"
    ] + DEPS
)
