load("//feature/configurator:feature.bzl", "feature")

feature(
    type = "library",
)

load("@rules_java//java:defs.bzl", "java_library", "java_test")

load(":deps.bzl", "DEPS")

java_library(
    name = "json",
    srcs = glob(["src/main/java/**/*.java",]),
    resources = glob(["src/main/resources/**"], allow_empty = True,),
    visibility = ["//visibility:public"],
    javacopts = ["--release", "21"],
    deps = [
        "//util/common",
        "//util/collection",
        "//serialization/traverser",
    ] + DEPS,
)

java_test(
    name = "json_test",
    srcs = glob(["src/test/java/**/*.java"]),
    main_class = "org.junit.platform.console.ConsoleLauncher",
    javacopts = ["--release", "21"],
    use_testrunner = False,
    args = [
        "--select-package", "jadex.json.test",
        "--fail-if-no-tests",
    ],
    deps = [
        ":json",
        "//serialization/traverser",
        "//util/common",
        "//serialization/traverser:traverser_test_fixtures",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_platform_junit_platform_suite_api",
    ] + DEPS,
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_suite_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_console",
    ],
)