load("//feature/configurator:feature.bzl", "feature")

feature(
    type = "library",
)

load("@rules_java//java:defs.bzl", "java_library", "java_test")

java_library(
    name = "traverser",
    srcs = glob(["src/main/java/**/*.java",]),
    resources = glob(["src/main/resources/**"], allow_empty = True,),
    visibility = ["//visibility:public"],
    javacopts = ["--release", "21"],
    deps = [
        "//util/common:common",
        "//util/collection:collection",
    ],
)

java_library(
    name = "traverser_test_fixtures",
    srcs = glob(["src/testFixtures/java/**/*.java"]),
    deps = [
        ":traverser",
        "//util/common:common",
        "//util/collection:collection",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
    ],
    visibility = ["//visibility:public"],
)

java_test(
    name = "traverser_test",
    srcs = glob(["src/test/java/**/*.java"]),
    main_class = "org.junit.platform.console.ConsoleLauncher",
    use_testrunner = False,
    args = [
        "--select-package", "jadex.commons.transformation.cloner",
        "--fail-if-no-tests",
    ],
    deps = [
        ":traverser",
        ":traverser_test_fixtures",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_platform_junit_platform_suite_api",
    ],
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_suite_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_console",
    ],
)